[package]
name = "rowan-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.0.1"
hashbrown = { version = "0.14.3", features = [
    "inline-more",
], default-features = false }
text-size = "1.1.0"
countme = "3.0.0"
memoffset = "0.9"
